# SZTU-autologin

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  autologin.py  autostart_windows.go  build.ps1  build.py  cmd_setup.go  config.go  config_test.go  daemon.go  daemon_other.go  daemon_windows.go  go.mod  login.go  main.go  main.py  pyproject.toml  utils.go  utils_test.go
.claude/: settings.local.json
cmd/autologin-launch/: main.go
core/: __init__.py  checker.py  config.py  lock.py  logger.py  login_engine.py  scheduler.py  status.py
docs/superpowers/plans/: 2025-03-31-go-rewrite.md  2026-03-31-sztu-autologin-plan.md
docs/superpowers/specs/: 2026-03-31-sztu-autologin-design.md
utils/: __init__.py  crypto.py  network.py
