[project]
name = "sztu-autologin"
version = "2.0.0"
description = "SZTU 校园网自动登录工具"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.32.3",
    "colorama>=0.4.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "utils"]

[dependency-groups]
dev = [
    "ruff>=0.15.8",
    "pyinstaller>=6.0.0",
]

[tool.ruff.lint]
ignore = ["E741"]  # 允许单字母变量名（加密算法中使用的 l）
